# metaagent

./: .env.example  .gitignore  README.md  main.py  pipeline_diagram_detailed.mmd  pyproject.toml
examples/jobs/: competitor_monitor.txt  support_triage.txt
ma/cli/: main.py
ma/core/: architect.py  brain.py  critic.py  state.py  synthesizer.py  validator.py
ma/display/: terminal.py
ma/llm/: groq_client.py
ma/utils/: logger.py
